--- a/config/config.yml
+++ b/config/config.yml
@@ -3,14 +3,14 @@ port: 8000
 auth:
   signing_key: "signing_key"
   hash_salt: "hash_salt"
-  token_ttl: 86400
+  token_ttl: 7889232
 
 mongo:
   uri: "mongodb+srv://dev:dev@cluster0.m7ccx.mongodb.net/myFirstDatabase?retryWrites=true&w=majority"
   name: "Messanger"
-  authCollection: "Auth"
-  chatCollection: "Chat"
-  messageCollection: "Message"
+  authCollection: "Crypto.Auth"
+  chatCollection: "Crypto.Chat"
+  messageCollection: "Crypto.Message"
 
 aes:
   auth-key: "./config/keys/auth.key"
