Created `TLS` certificate and key.
 + Added it in `config` file.

--- a/config/config.yml
+++ b/config/config.yml
@@ -12,6 +12,10 @@ mongo:
   chatCollection: "Crypto.Chat"
   messageCollection: "Crypto.Message"
 
+tls:
+  crt: "./config/keys/server.crt"
+  key: "./config/keys/server.key"
+
 aes:
   auth-key: "./config/keys/auth.key"
   chat-key: "./config/keys/chat.key"
